--- a/index.html
+++ b/index.html
@@ -6,8 +6,21 @@
   crossorigin="anonymous"></script>
   <!--ml5 package -->
   <script src="https://unpkg.com/ml5@0.6.1/dist/ml5.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
+
 </head>
 <body>
-
+  <div class="title">
+      <h3>Dashboard</h3>
+  </div>
+  <div class="holder">
+      <div class="sentimentHolder">
+          <p>put the sentiment scores here</p>
+      </div>
+      <button type="button" name="titleToggle" style="display:none" class="titleToggle">View Top Ten Titles</button>
+      <div class="topTitles" style="display:none">
+          <p>Put news article titles here</p>
+      </div>
+  </div>
   <script type="text/javascript" src="scripts/main.js"></script>
 </body>
