weather api config

--- a/index.html
+++ b/index.html
@@ -11,9 +11,34 @@
 </head>
 <body>
   <div class="title">
-      <h3>Dashboard</h3>
+      <h1>Hello, Ally</h1>
   </div>
   <div class="holder">
+      <div class="weatherHolder">
+          <p>Display Weather info here!</p>
+      </div>
+      <div class="newsOptions">
+          <h3>Select the news topics you are interested in:</h3>
+          <div class="tableHolder">
+            <table>
+                <tr>
+                  <td>Arts</td>
+                  <td>Books</td>
+                  <td>Business</td>
+                </tr>
+                <tr>
+                  <td>Fashion</td>
+                  <td>Food</td>
+                  <td>Health</td>
+                </tr>
+                <tr>
+                  <td>Magazine</td>
+                  <td>Movies</td>
+                  <td>Opinion</td>
+                </tr>
+            </table>
+          </div>
+      </div>
       <div class="sentimentHolder">
           <p>put the sentiment scores here</p>
       </div>
