--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!--ml5 package -->
   <script src="https://unpkg.com/ml5@0.6.1/dist/ml5.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
-
+  <script src="scripts/config.js"></script>
 </head>
 <body>
   <div class="title">
