--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
               <p onclick="getTopicData('politics')">Politics</p>
               <p onclick="getTopicData('opinion')">Opinion</p>
               <p onclick="getTopicData('world')">World</p>
+              <p onclick="getTopicData('us')">U.S.</p>
           </div>
       </div>
       <div class="sentimentHolder">
